kubernetes-configs/auth-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-app
  name: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/app-net: "true"
        io.kompose.service: auth-app
    spec:
      containers:
        - env:
            - name: SPRING_DATA_MONGODB_DATABASE
              value: auth-db
            - name: SPRING_DATA_MONGODB_HOST
              value: mongo-db-auth
            - name: SPRING_DATA_MONGODB_PORT
              value: "27017"
          image: auth-app
          name: auth-app
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
