kubernetes-configs/mongo-db-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-db-auth
  name: mongo-db-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-db-auth
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network: "true"
        io.kompose.service: mongo-db-auth
    spec:
      containers:
        - image: mongo
          name: mongo-db-auth
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: auth-data
      restartPolicy: Always
      volumes:
        - name: auth-data
          persistentVolumeClaim:
            claimName: auth-data
status: {}
