kubernetes-configs/auth-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-app
  name: auth-app
spec:
  ports:
    - name: "9091"
      port: 9091
      targetPort: 8080
  selector:
    io.kompose.service: auth-app
status:
  loadBalancer: {}
