kubernetes-configs/mongo-db-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-db-auth
  name: mongo-db-auth
spec:
  ports:
    - name: "27020"
      port: 27020
      targetPort: 27017
  selector:
    io.kompose.service: mongo-db-auth
status:
  loadBalancer: {}
